Fix RTL text alignment
Fixed the text to show completely on the right side of the suggestion view box. Instead of showing in the middle.

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -619,7 +619,8 @@ form + .login-label {
   background-color: #fff;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  position: relative;
+  position: absolute;
+  right: 15px;
   transform: translateY(-100%);
   z-index: 10;
 }
